samples/_failures_safe/1761321048_3a5a74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5a83ff4.c: In function ‘main’:
./samples/SAFE/__tmp_c5a83ff4.c:141:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  141 |     WordCount words
      |     ^~~~~~~~~
./samples/SAFE/__tmp_c5a83ff4.c:141:5: error: expected declaration or statement at end of input
